# AgenticRAG-Search-Engine

./: .gitignore  README.md  app.py  pyproject.toml
data/: book_summaries.json  competency_questions.json  detected_chapters.json  raw_triples_shakespeare_complete.partial.json  schema.json  taxonomy.json
data/aliases/: aliases_alice_in_wonderland.json  aliases_beowulf.json  aliases_count_of_monte_cristo.json  aliases_dracula.json  aliases_frankenstein.json  aliases_great_gatsby.json  aliases_pride_and_prejudice.json  aliases_prince.json
data/books/: alice_in_wonderland.txt  beowulf.txt  count_of_monte_cristo.txt  dracula.txt  frankenstein.txt  great_gatsby.txt  pride_and_prejudice.txt  prince.txt
data/eval_queries/: queries.json
data/fine_tuning/: intent_eval.jsonl  intent_eval_vertex.jsonl  intent_train.jsonl  intent_train_vertex.jsonl
docs/: ARCHITECTURE.md
notebooks/: extraction.ipynb  retrieval_evaluation.ipynb  retrieval_tests.ipynb  taxonomy_ontology.ipynb
scripts/: upload_raw_triples.py
src/: session.py
src/agents/: __init__.py  comparative_agent.py  graph_rag_agent.py  intent_classifier.py  orchestrator.py  synthesis_agent.py  thematic_agent.py  vector_rag_agent.py
src/config/: __init__.py  qdrant_upload.py  supermemory_client.py
src/models/: __init__.py  agent_contracts.py
src/tools/: __init__.py  book_summary_search.py  graph_search.py  grounding_check.py  read_agent_results.py  read_scratchpad.py  rerank.py  resolve_entities.py  route_query.py  vector_search.py  write_results.py  write_scratchpad.py
(+12 files in other folders)
